--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "method-override": "^2.3.9",
     "mongoose": "^4.11.9",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
