--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
-    "method-override": "^2.3.9",
+    "jsonwebtoken": "^7.4.3",
     "mongoose": "^4.11.9",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
