--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12",
     "serve-favicon": "^2.4.3",
